# myfeed

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  build.rs  docker-compose.test.yml
.github/ISSUE_TEMPLATE/: new-site-recipe.yml
.github/workflows/: ci.yml
docs/: agent-digest-guide.md  architecture.md  code-quality-findings.md  codelabs.md  demo-snapshot.md  design-comparison.md  design.md  site-wishlist.md  tasks.md
docs/designs/: 260323-agent-readable-digest.md  (+5 more)
prompts/: daily-digest.md  tech-radar.md  trending-topics.md
proto/: myfeed.proto
recipes/: 1point3acres-feed.yaml  1point3acres-news-feed.yaml  36kr-feed.yaml  businessinsider-explore.yaml  businessinsider-feed.yaml  caixin-feed.yaml  cls-feed.yaml  douban-feed.yaml  eastmoney-feed.yaml  finviz-feed.yaml  futunn-feed.yaml  github-trending-feed.yaml  google-flights-feed.yaml  hackernews-feed.yaml  infoq-feed.yaml  latepost-feed.yaml  linkedin-feed.yaml  nyt-explore.yaml  nyt-feed.yaml  peoplesdaily-feed.yaml  reddit-feed.yaml  seekingalpha-feed.yaml  slashdot-feed.yaml  substack-feed.yaml  telegram-channel-feed.yaml  telegram-durov-feed.yaml  telegram-telegram-feed.yaml  tildes-feed.yaml  v2ex-feed.yaml  weibo-hot-feed.yaml  wsj-explore.yaml  wsj-feed.yaml  x-feed.yaml  xueqiu-feed.yaml  xueqiu-topics-feed.yaml  zhihu-feed.yaml
scripts/: explore.sh  run-with-changelog.sh
src/: config.rs  crawler.rs  db.rs  feed.rs  main.rs  notifier.rs  proto.rs  scheduler.rs  schema.rs  telegram.rs
tests/: cli.rs  integration.rs
(+51 files in other folders)
