[package]
name = "myfeed"
version = "0.1.0"
edition = "2024"
description = "Personal feed bot powered by pwright browser automation"
license = "MIT"
repository = "https://github.com/Shuozeli/myfeed"

[dependencies]
# Browser automation
pwright-bridge = { git = "https://github.com/shuozeli/pwright.git", branch = "main" }
pwright-script = { git = "https://github.com/shuozeli/pwright.git", branch = "main" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (Telegram API)
reqwest = { version = "0.12", features = ["json"] }

# Database
diesel = { version = "2", features = ["sqlite"] }
diesel_migrations = "2"

# Protobuf
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Async trait support
async-trait = "0.1"

[build-dependencies]
prost-build = "0.13"
